
12. Added associators() and associatorNames() operations to CIM repository.
    (MEB)

13. More on association implementation (all four operations supported).
    Need to handle deletion of associations and protocol stubs still.
    Need to test class associations (rather than just instance associations).
    Need to handle deleteInstance().
    (MEB)

--------------------------------------------------------------------------------
Version 0.97.3 - Released 5 June 2001

1. (KS)OptionManager (CPP and H), Logger (CPP and H), Handler (CPP and H),
CIMServer (both)
Functions added include:
	a. Enable trace to log file.
	b. Add option so that you can trace to console or trace to logfile (-l
	is
	   trace to log, -t is trace to console).
	c. add parameter in optionsrow for help message and enable the capture
	   of these messages in Options class.  Also added help print that
	   prints these things out.  However, format not to beautiful.
	d. Eliminate a couple of messages coming from __Namespace provider.
	e. Extend the Clients\testclient so he does tests on Namespace.
2. (KS)Extended Log to show time, severity.
3. (KS)Added getCurrentASCIITime functions to System.x
4. (KS)Extended options on CIMServer including 1. option to determine where
logs
are put
5. (KS)Added TestClient that executes a series of tests against a server.
This is a preliminary version.
6. (KS)Corrected problem with acceptor.bind where failure was being lost. Now
throws CannotBind exception.
7. (KS)Added logger entry to XMLParser for errors.  NOTE: At this point it may
not
print out all of the message.  At the least it prints out the error message
and components of the message causing the problem.
8. (KS)Added clean option to server but temprarily disabled.
9. (KS)Fixed problem where logs were not created unless logs directory already
existed.

--------------------------------------------------------------------------------
Version 0.97.2

1. Extend HP UX port to correctly load Dynamic Load Libraries.